Intro z-index fixed

--- a/code/framework/templates/default/__grid/default__grid.scss
+++ b/code/framework/templates/default/__grid/default__grid.scss
@@ -1,6 +1,14 @@
 @mixin default__grid {
   overflow-x: hidden;
 
+  position: relative;
+  .articles,
+  .article,
+  .footer {
+    position: relative;
+  }
+
+
   .articles,
   .footer {
     @include mobile {
