--- a/code/project/intro/--active/intro--active.scss
+++ b/code/project/intro/--active/intro--active.scss
@@ -4,6 +4,7 @@
   align-items: center;
 
   position: relative;
+  z-index: 1;
   height: auto;
   margin: 33vh 0;
 
